compiler/tools/fpp-check/test/spec_loc/state_machine_path_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/state_machine_path_error.fpp:1.28
locate state machine SM at "incorrect.fpp"
                           ^
error: incorrect location path [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/incorrect.fpp
actual location is [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/state_machine_path_error.fpp:2.1
state machine SM
^
